add some code review to Hash class and DeclarationChecker